<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sort_alpha"
        android:icon="@drawable/ic_sort_by_alpha"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:title="@string/main_bottom_alpha" />

    <item
        android:id="@+id/sort_digit"
        android:icon="@drawable/ic_list_numbered"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        android:title="@string/main_bottom_digit" />

    <item
        android:id="@+id/sort_fresh"
        android:icon="@drawable/ic_today"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"
        android:title="@string/main_bottom_fresh" />

</menu>