<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_artist"
            style="@style/TextInputEditText"
            android:inputType="textPersonName"
            android:hint="@string/song_artist"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title"
            style="@style/TextInputEditText"
            android:inputType="text"
            android:hint="@string/song_title"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_release_date"
            style="@style/TextInputEditText"
            android:inputType="date"
            android:clickable="false"
            android:focusable="false"
            android:hint="@string/song_release_date"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:background="@drawable/sh_rounded_light">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/sp_work_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:backgroundTint="@color/primaryDark" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/song_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mixed_by"
                style="@style/TextInputEditText"
                android:inputType="textPersonName"
                android:hint="@string/song_mixed_by"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="4dp"
                android:paddingEnd="0dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:background="@drawable/sh_rounded_light">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/sp_mix_version"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    app:backgroundTint="@color/primaryDark" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:background="@drawable/sh_rounded_light">

                <androidx.appcompat.widget.AppCompatCheckBox
                    style="@style/CheckboxStyle"
                    android:id="@+id/cb_dirty"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/song_dirty" />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>